# Spatial-Modulation-on-ITPP

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  readme.md  spatial_modulation  spatial_modulation.cpp
src/: run.cpp
src/encoder/: CMakeLists.txt  bitmap.cpp  encoder.cpp  encoder.hpp
src/mimo/: CMakeLists.txt  simulator.cpp  simulator.hpp  spatial_modulation.cpp
