cmake_minimum_required(VERSION 2.8)
find_package(OpenCV REQUIRED )
find_package(PkgConfig)
pkg_check_modules(ITPP REQUIRED itpp)
include_directories(${OpenCV_INCLUDE_DIRS})
add_definitions("-std=c++11")
add_library(encoder STATIC encoder.cpp )
target_link_libraries(encoder ${OpenCV_LIBS} )
target_link_libraries(encoder ${ITPP_LIBRARIES})
